--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -17,7 +17,7 @@
     <div id="container">
         <header class="page-header">
             <div class="top-bar-container">
-                <a href="index.html">
+                <a href="/">
                     <img src="images/icons/back.svg" alt="Voltar">
                 </a>
                 <img src="images/logo.svg" alt="Proffy">
@@ -28,12 +28,12 @@
             </div>
         </header>
         <main>
-            <form action="" id="create-class">
+            <form action="/save-classes" id="create-class" method="POST">
                 <fieldset>
                     <legend>Seus dados</legend>
                         <div class="input-block">
                             <label for="name">Nome completo</label>
-                            <input type="text name="name" id="name" required>
+                            <input type="text" name="name" id="name" required>
                         </div>
                         <div class="input-block">
                             <label for="avatar">Link da sua foto <small>(comece com https://)</small></label>
@@ -55,16 +55,9 @@
                         <label for="subject">Matéria</label>
                         <select name="subject" id="subject" required>
                             <option value="" disabled="" hidden="">Selecione uma opção</option>
-                            <option value="1">Artes</option>
-                            <option value="2">Biologia</option>
-                            <option value="3">Ciências</option>
-                            <option value="4">Educação Física</option>
-                            <option value="5">Física</option>
-                            <option value="6">Geografia</option>
-                            <option value="7">História</option>
-                            <option value="8">Matemática</option>
-                            <option value="9">Português</option>
-                            <option value="10">Químinca</option>
+                            {% for subject in subjects %}
+                                <option value="{{loop.index}}">{{subject}}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="input-block">
@@ -82,13 +75,9 @@
                             <label for="weekday">Dia da semana</label>
                             <select name="weekday[]" required>
                                 <option value="" disable="" hidden="">Selecione uma opção</option>
-                                <option value="0">Domingo</option>
-                                <option value="1">Segunda-feira</option>
-                                <option value="2">Terça-feira</option>
-                                <option value="3">Quarta-feira</option>
-                                <option value="4">Quinta-feira</option>
-                                <option value="5">Sexta-feira</option>
-                                <option value="6">Sábado</option>
+                                {% for weekday in weekdays %}
+                                    <option value="{{loop.index}}">{{weekday}}</option>
+                                {% endfor %}
                             </select>
                         </div>
                         
