--- a/src/views/index.html
+++ b/src/views/index.html
@@ -25,8 +25,8 @@
         <img class="hero-image" src="images/landing.svg" alt="Plataforma de estudos">
 
         <div class="buttons-container">
-            <a class="study" href="study.html"><img src="images/icons/study.svg" alt="Estudar"> Estudar</a>
-            <a class="give-classes" href="give-classes.html"><img src="images/icons/give-classes.svg" alt="Estudar"> Dar Aulas</a>
+            <a class="study" href="study"><img src="images/icons/study.svg" alt="Estudar"> Estudar</a>
+            <a class="give-classes" href="/give-classes"><img src="images/icons/give-classes.svg" alt="Estudar"> Dar Aulas</a>
         </div>
 
         <p class="total-connections">
